// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Grid > should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="sc-gswNZR iuXszx"
  >
    <div>
      test
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid > should match snapshot with gap prop 1`] = `
<DocumentFragment>
  <div
    class="sc-gswNZR gohYTZ"
  >
    <div>
      test
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid > should match snapshot with lg 1`] = `
<DocumentFragment>
  <div
    class="sc-gswNZR iuXszx"
  >
    <div
      class="sc-bcXHqe fzKNzq"
    >
      test
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid > should match snapshot with md 1`] = `
<DocumentFragment>
  <div
    class="sc-gswNZR iuXszx"
  >
    <div
      class="sc-bcXHqe jDRcfe"
    >
      test
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid > should match snapshot with sm 1`] = `
<DocumentFragment>
  <div
    class="sc-gswNZR iuXszx"
  >
    <div
      class="sc-bcXHqe hZLxVA"
    >
      test
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid > should match snapshot with xl 1`] = `
<DocumentFragment>
  <div
    class="sc-gswNZR iuXszx"
  >
    <div
      class="sc-bcXHqe irNztP"
    >
      test
    </div>
  </div>
</DocumentFragment>
`;
